# CUDA-Boiding

./: .gitattributes  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  instrukcja.txt
.github/workflows/: cmake-multi-platform.yml
Dependencies/include/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glm.vcxproj  glm.vcxproj.filters
Dependencies/include/imgui/backends/: imgui_impl_opengl3.cpp
ShoalOfFish/: Benchmark.cpp  BoidsDrawer.cu  BoidsDrawer.cuh  BoidsEngine.cpp  BoidsEngine.h  BoidsEngine_CPU.cpp  BoidsEngine_CPU_P.cpp  BoidsEngine_CPU_TEST.cpp  BoidsEngine_GPU_SH.cu  BoidsEngine_GPU_SH.cuh  BoidsLogic.cpp  BoidsLogicGPU.cu  BoidsLogicGPU_SH.cpp  BoidsLogicGPU_SH.cuh  BoidsLogicTEST.cpp  BoidsLogickCPU_P.cpp  BoidsModel.cpp  BoxModel.cpp  Camera.cpp  Menu.cpp  Menu.h  Model.h  ProgressBar.cpp  Shader.cpp  ShoalOfFish.vcxproj  ShoalOfFish.vcxproj.filters  imgui.ini  main.cpp  main.cu  shaders_box.h  shaders_core.h
ShoalOfFish/cuda/: BoidsLogicGPU.cu
ShoalOfFish/shaders/boids/: fragment_core.glsl  vertex_core.glsl
src/: BoidDrawer.cpp  BoidsDrawer.cpp  BoidsDrawer.cu  BoidsLogic.cpp  BoidsModel.cpp  Box.cpp  BoxModel.cpp  Camera.cpp  Flock.cpp  Game.cpp  Model.cpp  Pyramid.h  Shader.cpp  Shader.h  Texture.h  boid.cpp  fragment_core.glsl  libs.h  main.cpp  main.cu  vertex_core.glsl
src/box/: fragment_box.glsl  vertex_box.glsl
src/cuda/: BoidsLogicGPU.cu
src/shaders/: fun.cu
